Fix breaking words on firefox. Set smallet min width for fields on edit

--- a/css/index.css
+++ b/css/index.css
@@ -113,12 +113,10 @@ a.navbar-brand:hover {
 
 .task{
     display: flex;
-    word-break: break-word;
-    height: fit-content;
+    word-break: break-all;
 }
 
 .task-title{
-    display: flex;
     justify-self: center;
 }
 
@@ -130,5 +128,5 @@ a.navbar-brand:hover {
     border: 2px solid rgb(231, 76, 60);
     background-color: rgb(243, 188, 154);
     display: inline-block;
-    min-width: 200px;
+    min-width: 130px;
 }
